fix: reduce mobile button padding on mobile

--- a/src/components/forms/form.module.scss
+++ b/src/components/forms/form.module.scss
@@ -131,6 +131,10 @@
       &:active {
         transform: scale(0.98);
       }
+
+      @include mobile {
+        padding-inline: 1.6rem;
+      }
     }
 
     .cancelButton {
